fixed the wrapping

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,6 +25,7 @@ html, body {
   display: flex;
   flex-direction: row;
   color: white;
+  flex-wrap: wrap;
 }
 
 #about-me {
